hphp/test/zend/bad/ext/session/tests/bug66481.php
<?php

var_dump(session_name("foo"));
var_dump(session_name("bar"));
